--- a/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/NowaGra.resx
+++ b/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/NowaGra.resx
@@ -119,7 +119,7 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>621, 25</value>
+    <value>607, 25</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="panel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
@@ -177,6 +177,9 @@
   <data name="panel2.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Right</value>
   </data>
+  <data name="panel2.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
+    <value>Zoom</value>
+  </data>
   <data name="label1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>None</value>
   </data>
@@ -190,7 +193,7 @@
     <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>196, 86</value>
+    <value>196, 30</value>
   </data>
   <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -226,7 +229,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>521, 744</value>
+    <value>521, 632</value>
   </data>
   <data name="panel2.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -289,7 +292,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="pasek_zycia_Postaci.Size" type="System.Drawing.Size, System.Drawing">
-    <value>508, 28</value>
+    <value>521, 28</value>
   </data>
   <data name="pasek_zycia_Postaci.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -744,6 +747,45 @@
   <data name="&gt;&gt;doswiadczenie_picture_box.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
+  <data name="panel_Postaci.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
+    <value>Zoom</value>
+  </data>
+  <data name="&gt;&gt;zycie_postaci_Label.Name" xml:space="preserve">
+    <value>zycie_postaci_Label</value>
+  </data>
+  <data name="&gt;&gt;zycie_postaci_Label.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;zycie_postaci_Label.Parent" xml:space="preserve">
+    <value>panel_Postaci</value>
+  </data>
+  <data name="&gt;&gt;zycie_postaci_Label.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="panel_Postaci.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 37</value>
+  </data>
+  <data name="panel_Postaci.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="panel_Postaci.Size" type="System.Drawing.Size, System.Drawing">
+    <value>483, 632</value>
+  </data>
+  <data name="panel_Postaci.TabIndex" type="System.Int32, mscorlib">
+    <value>5</value>
+  </data>
+  <data name="&gt;&gt;panel_Postaci.Name" xml:space="preserve">
+    <value>panel_Postaci</value>
+  </data>
+  <data name="&gt;&gt;panel_Postaci.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel_Postaci.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;panel_Postaci.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
   <data name="zycie_postaci_Label.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>None</value>
   </data>
@@ -757,7 +799,7 @@
     <value>NoControl</value>
   </data>
   <data name="zycie_postaci_Label.Location" type="System.Drawing.Point, System.Drawing">
-    <value>159, 86</value>
+    <value>196, 24</value>
   </data>
   <data name="zycie_postaci_Label.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -786,30 +828,6 @@
   <data name="&gt;&gt;zycie_postaci_Label.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="panel_Postaci.Location" type="System.Drawing.Point, System.Drawing">
-    <value>32, 37</value>
-  </data>
-  <data name="panel_Postaci.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="panel_Postaci.Size" type="System.Drawing.Size, System.Drawing">
-    <value>492, 744</value>
-  </data>
-  <data name="panel_Postaci.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
-  </data>
-  <data name="&gt;&gt;panel_Postaci.Name" xml:space="preserve">
-    <value>panel_Postaci</value>
-  </data>
-  <data name="&gt;&gt;panel_Postaci.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panel_Postaci.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;panel_Postaci.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
   <data name="Ulecz.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
@@ -820,7 +838,7 @@
     <value>Microsoft Sans Serif, 9.75pt, style=Bold</value>
   </data>
   <data name="Ulecz.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 800</value>
+    <value>13, 729</value>
   </data>
   <data name="Ulecz.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -850,7 +868,7 @@
     <value>True</value>
   </data>
   <data name="Czas.Location" type="System.Drawing.Point, System.Drawing">
-    <value>283, 800</value>
+    <value>292, 740</value>
   </data>
   <data name="Czas.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -886,7 +904,7 @@
     <value>25</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+    <value>120, 120</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>1902, 1033</value>
