--- a/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/Properties/Resources.resx
+++ b/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/Properties/Resources.resx
@@ -208,4 +208,28 @@
   <data name="ogien" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ogien.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Baal_droga" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Baal_droga.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Baal_walka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Baal_walka.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Duriel_droga" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Duriel_droga.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="duriel_walka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\duriel_walka.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mefisto_profilowe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mefisto_profilowe.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mefisto_walka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mefisto_walka.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tyrael_droga" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tyrael_droga.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tyrael_walka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tyrael_walka.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
